--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <a href="#location" class="skip_menu">생생VR 바로가기</a>
     <a href="#quick" class="skip_menu">요기조기 바로가기</a>
 
-    <!-- <div id="layer">
+    <div id="layer">
       <p>이 사이트는 학습용으로 제작하였으며 유성구 문화관광과 무관합니다.</p>
       <p>구직용 포트폴리오로 <strong>상업적 목적이 없음</strong>을 알립니다.</p>
       <button>닫기 X</button>
-    </div> -->
+    </div>
 
     <div id="wrap">
       <header>
@@ -310,7 +310,8 @@
               </p>
               <div class="df">
                 <div class="progress"></div>
-                <p id="slider_num"></p>
+                <span id="slider_num2"></span>
+                /<p id="slider_num"></p>
               </div>
               <ul class="controls">
                 <li class="prev"><a href="javascript:;"></a></li>
@@ -376,7 +377,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img02.jpg" alt="" />
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -387,7 +388,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img03.jpg" alt="" />
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -398,7 +399,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img04.jpg" alt="" />
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -409,7 +410,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img06.jpg" alt="" />
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -536,7 +537,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img09.jpg" alt="" />
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -547,7 +548,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img10.jpg" alt="" />
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -558,7 +559,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img11.jpg" alt="" />
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -569,7 +570,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img12.jpg" alt="" />
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -810,5 +811,6 @@
     <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/slider.js"></script>
+    <script src="js/tab.js"></script>
   </body>
 </html>
