--- a/index.html
+++ b/index.html
@@ -12,47 +12,39 @@
 
       gtag("config", "G-GBWVDRHRTR");
     </script>
-    <meta charset="UTF-8" />
-    <!-- 익스호환성 / 익스를 엣지로 렌더링해라(웹문서 표시하는것을 렌더링한다라고함) -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- 반응형 / 너비는 디바이스너비에 따라라, 초기화-배율(처음배율은 1배)-글자 -->
-    <!-- 모바일에서 글자가 줄어드는 것을 방지함 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- 검색로봇이 글어갈수 잇냐 없냐(개방할것인가 안할것인가) -->
-    <meta name="robot" content="index,nofollow" />
-    <!-- 검색엔진에 설명글 /검색시에 밑에 나오는 글긔 -->
-    <meta name="description" content="유성문화관광 홈페이지입니다." />
-    <meta name="author" content="김민정" />
-    <!-- 검색 키워드 -->
-    <meta name="keyword" content="유성,유성문화관광,프로젝트" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robot" content="index,nofollow">
+    <meta name="description" content="유성문화관광 홈페이지입니다.">
+    <meta name="author" content="김민정">
+    <meta name="keyword" content="유성,유성문화관광,프로젝트">
 
-    <meta property="og:title" content="유성문화관광, 프로젝트" />
-    <meta property="og:description" content="김민정의 반응형 프로젝트입니다." />
-    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html" />
-    <meta property="og:image" content="images/og_img.png" />
+    <meta property="og:title" content="유성문화관광, 프로젝트">
+    <meta property="og:description" content="김민정의 반응형 프로젝트입니다.">
+    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html">
+    <meta property="og:image" content="images/og_img.png">
 
     <title>유성구 문화관광</title>
 
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="images/favicon/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
-
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/media.css" />
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <a href="#main" class="skip_menu">메인화면 바로가기</a>
@@ -87,8 +79,8 @@
         <div class="header_bot">
           <div class="logo">
             <h1>
-              <a href="#" class="logo_img"><span>유성구</span></a>
-              <a href="#"><strong>문화관광</strong></a>
+              <a href="https://kimminjung96.github.io/project1/" class="logo_img"><span>유성구</span></a>
+              <a href="https://kimminjung96.github.io/project1/"><strong>문화관광</strong></a>
             </h1>
           </div>
           <nav id="lnb" class="width100 pr">
@@ -99,8 +91,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>온천도시 유성</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" />
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
                       <h3><a href="#">유성온천이란?</a></h3>
@@ -128,8 +120,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>유성명소</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" />
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
                       <h3><a href="#">관광TOP10</a></h3>
@@ -156,8 +148,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>추천여행</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" />
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
                       <h3><a href="#">유성! 추천여행</a></h3>
@@ -188,8 +180,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>축제·공연</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" />
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
                       <h3><a href="#">유성온천문화축제</a></h3>
@@ -215,8 +207,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>숙박·음식·쇼핑</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" />
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
                       <h3><a href="#">숙박</a></h3>
@@ -251,8 +243,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>여행 가이드</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="" />
+                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="">
                     </li>
                     <li>
                       <h3><a href="#">공지사항</a></h3>
@@ -272,7 +264,7 @@
             </ul>
           </nav>
           <div class="sitemap">
-            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동" /></a>
+            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동"></a>
           </div>
         </div>
       </header>
@@ -288,13 +280,13 @@
             <div id="brandVisual">
               <ul>
                 <li class="visual_1">
-                  <a href="#"><img src="images/main_banner1.jpg" alt="메인슬라이더 베너1" /></a>
+                  <a href="#"><img src="images/main_banner1.jpg" alt="메인슬라이더 베너1"></a>
                 </li>
                 <li class="visual_2">
-                  <a href="#"><img src="images/main_banner2.jpg" alt="메인슬라이더 베너2" /></a>
+                  <a href="#"><img src="images/main_banner2.jpg" alt="메인슬라이더 베너2"></a>
                 </li>
                 <li class="visual_3">
-                  <a href="#"><img src="images/main_banner3.jpg" alt="메인슬라이더 베너3" /></a>
+                  <a href="#"><img src="images/main_banner3.jpg" alt="메인슬라이더 베너3"></a>
                 </li>
               </ul>
             </div>
@@ -366,7 +358,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img01.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -377,7 +369,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img02.jpg" alt="" />
+                      <img src="images/mcont1_img02.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -388,7 +380,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img03.jpg" alt="" />
+                      <img src="images/mcont1_img03.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -399,7 +391,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img04.jpg" alt="" />
+                      <img src="images/mcont1_img04.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -410,7 +402,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img06.jpg" alt="" />
+                      <img src="images/mcont1_img06.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -423,7 +415,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img07.jpg" alt="" />
+                      <img src="images/mcont1_img07.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 유성 족욕체험장길 </b>
@@ -434,7 +426,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img01.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -445,7 +437,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img01.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -456,7 +448,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img01.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -467,7 +459,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img01.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -480,7 +472,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img12.jpg" alt="" />
+                      <img src="images/mcont1_img12.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -491,7 +483,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img01.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -502,7 +494,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img01.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -513,7 +505,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img01.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -524,7 +516,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img01.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -537,7 +529,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img09.jpg" alt="" />
+                      <img src="images/mcont1_img09.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -548,7 +540,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img10.jpg" alt="" />
+                      <img src="images/mcont1_img10.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -559,7 +551,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img11.jpg" alt="" />
+                      <img src="images/mcont1_img11.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -570,7 +562,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img12.jpg" alt="" />
+                      <img src="images/mcont1_img12.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -581,7 +573,7 @@
                 <li>
                   <a href="#">
                     <div class="thumb">
-                      <img src="images/mcont1_img01.jpg" alt="" />
+                      <img src="images/mcont1_img01.jpg" alt="">
                     </div>
                     <div class="txt">
                       <b> 우리의 추억, 대전 엑스포 </b>
@@ -606,7 +598,7 @@
           <div class="vr df">
             <div class="vr_slider pr">
               <div class="vr_img">
-                <img src="images/300_TR_202105110255503251.jpg" alt="" />
+                <img src="images/300_TR_202105110255503251.jpg" alt="">
               </div>
               <div class="txt">
                 <b><span>VR사이버투어</span> 유림공원</b>
@@ -631,7 +623,7 @@
               </ul>
             </div>
             <div class="vr_map pr">
-              <img src="images/map.png" alt="" />
+              <img src="images/map.png" alt="">
             </div>
           </div>
         </div>
@@ -652,7 +644,7 @@
             <div class="n1">
               <h5>맞춤관광</h5>
               <p>
-                유성구에서 어떤 여행을<br />
+                유성구에서 어떤 여행을<br>
                 기대하고 계시나요?
               </p>
               <div class="select_wrap df">
@@ -790,7 +782,7 @@
       <footer>
         <div class="inner">
           <div class="foot_logo">
-            <img src="images/footlogo.png" alt="" />
+            <img src="images/footlogo.png" alt="">
           </div>
           <ul class="df">
             <li>
