--- a/index.html
+++ b/index.html
@@ -796,6 +796,7 @@
             <address>(우 12345) 서울특별시 동대문구 삼성로 999 <span>전화 : 042-1885-4875</span></address>
             <p>Copyright © 2022 KMJ. ALL RIGHTS RESERVED.</p>
           </div>
+          <a href="https://validator.w3.org/check?uri=https://kimminjung96.github.io/project1/"><img src="https://www.w3.org/Icons/valid-html401" alt="유효성검사"></a>
         </div>
       </footer>
     </div>
