--- a/index.html
+++ b/index.html
@@ -797,6 +797,7 @@
             <p>Copyright © 2022 KMJ. ALL RIGHTS RESERVED.</p>
           </div>
           <a href="https://validator.w3.org/check?uri=https://kimminjung96.github.io/project1/"><img src="https://www.w3.org/Icons/valid-html401" alt="유효성검사"></a>
+          <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://kimminjung96.github.io/project1/"><img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="유효성검사"></a>
         </div>
       </footer>
     </div>
