--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
       <button>닫기 X</button>
     </div>
 
+    <div id="TopBtn">
+      <img src="images/topBtn.png" alt="">
+    </div>
+
     <div id="wrap">
       <header>
         <div class="header_top">
@@ -302,8 +306,7 @@
               </p>
               <div class="df">
                 <div class="progress"></div>
-                <span id="slider_num2"></span>
-                /<p id="slider_num"></p>
+                <p id="slider_num"></p>
               </div>
               <ul class="controls">
                 <li class="prev"><a href="javascript:;"></a></li>
@@ -806,5 +809,6 @@
     <script src="js/script.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/tab.js"></script>
+    <script src="js/top.js"></script>
   </body>
 </html>
