스크롤이벤트추가

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       <section id="pick">
         <h4 class="title">취향<span>척척</span></h4>
         <p>여행객들을 위한 유성구만의 멋진 여행코스를 추천합니다.</p>
-        <div class="li">
+        <div class="li" id="up">
           <b></b>
         </div>
         <div class="inner">
