--- a/index.html
+++ b/index.html
@@ -799,8 +799,10 @@
             <address>(우 12345) 서울특별시 동대문구 삼성로 999 <span>전화 : 042-1885-4875</span></address>
             <p>Copyright © 2022 KMJ. ALL RIGHTS RESERVED.</p>
           </div>
-          <a href="https://validator.w3.org/check?uri=https://kimminjung96.github.io/project1/"><img src="https://www.w3.org/Icons/valid-html401" alt="유효성검사"></a>
-          <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://kimminjung96.github.io/project1/"><img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="유효성검사"></a>
+          <div class="footer_link">
+            <a href="https://validator.w3.org/check?uri=https://kimminjung96.github.io/project1/"><img src="https://www.w3.org/Icons/valid-html401" alt="유효성검사"></a>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://kimminjung96.github.io/project1/"><img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="유효성검사"></a>
+          </div>
         </div>
       </footer>
     </div>
