--- a/index.html
+++ b/index.html
@@ -280,6 +280,68 @@
             <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동" /></a>
           </div>
         </div>
+        <div id="full_menu">
+          <ul>
+            <li>
+              <a href="#">온천도시 유성</a>
+              <ul>
+                <li><a href="#">유성온천이란?</a></li>
+                <li><a href="#">족욕체험장 안내</a></li>
+                <li><a href="#">한방족욕장 안내</a></li>
+                <li><a href="#">온천수 사용 업소</a></li>
+                <li><a href="#">온천욕 하는법</a></li>
+              </ul>
+            </li>
+            <li><a href="#">유성명소</a>
+              <ul>
+                <li><a href="#">관광TOP10</a></li>
+                <li><a href="#">과학탐구여행</a></li>
+                <li><a href="#">체험관</a></li>
+                <li><a href="#">박물관 / 미술관 / 전시관</a></li>
+                <li><a href="#">농촌체험마을</a></li>
+                <li><a href="#">자연 / 풍경</a></li>
+                <li><a href="#">이색장소</a></li>
+                <li><a href="#">문화재</a></li>
+                <li><a href="#">레저 / 스포츠</a></li>
+              </ul>
+            </li>
+            <li><a href="#">추천여행</a>
+              <ul>
+                <li><a href="#">유성! 추천여행</a></li>
+                <li><a href="#">도보 · 자전거관광</a></li>
+                <li><a href="#">어린이 관광코스</a></li>
+                <li><a href="#">대전 시티투어</a></li>
+                <li><a href="#">맞춤형 관광 검색</a></li>
+                <li><a href="#">VR사이버투어</a></li>
+              </ul>
+            </li>
+            <li><a href="#">축제·공연</a>
+              <ul>
+                <li><a href="#">유성온천문화축제</a></li>
+                <li><a href="#">국화전시회</a></li>
+                <li><a href="#">동별마을축제</a></li>
+                <li><a href="#">문화공연</a></li>
+                <li><a href="#">축제갤러리</a></li>
+              </ul>
+            </li>
+            <li><a href="#">숙박·음식·쇼핑</a>
+              <ul>
+                <li><a href="#">숙박</a></li>
+                <li><a href="#">음식</a></li>
+                <li><a href="#">쇼핑</a></li>
+              </ul>
+            </li>
+            <li><a href="#">여행가이드</a>
+              <ul>
+                <li><a href="#">공지사항</a></li>
+                <li><a href="#">교통정보</a></li>
+                <li><a href="#">1330전국관광안내</a></li>
+                <li><a href="#">관광안내소</a></li>
+                <li><a href="#">관광안내지도-책자신청</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </header>
 
       <section id="main">
@@ -288,7 +350,6 @@
           <div class="title">
             <p>모이고 떠들고 먹고 즐기는</p>
             <strong><b>천년온천</b>유성의<b>도시미학</b></strong>
-            
           </div>
           <div class="slider_wrap">
             <div id="weather"></div>
